chore: rename package to meama-community

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meama-community-mobile",
+  "name": "meama-community",
   "private": true,
   "version": "0.0.0",
   "type": "module",
